--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,9 @@
 - name: install package
   hosts: webservers
-  remote_user: root
+  remote_user: phlexing_ci
+  become: yes
+  become_method: sudo
+  become_user: root
   vars_files:
   - group_vars/all
   tasks:
