--- a/roles/centos/tasks/flex-2.6.4.yml
+++ b/roles/centos/tasks/flex-2.6.4.yml
@@ -17,7 +17,7 @@
     set -e
     cd /opt/flex-{{ FLEX_VERSION }}
     sed -i "/math.h/a #include <malloc.h>" src/flexdef.h
-    HELP2MAN=/usr/bin/true && ./configure --prefix=/usr --docdir=/usr/share/doc/flex-2.6.4
+    HELP2MAN=/usr/bin/true && ./configure --prefix=/usr --docdir=/usr/share/doc/flex-{{ FLEX_VERSION }}
     make -j "$(nproc)"
     make check || true
     make install
